# lolserialize

./: .gitignore  Cargo.toml  ci.sh  example.lol
.github/workflows/: ci.yml
doc/: reference.md  rpc_transport.md
lolserialize-compiler/: Cargo.toml
lolserialize-compiler/src/: checker.rs  codegen.rs  codegen_go.rs  lib.rs  main.rs
lolserialize-runtime/: Cargo.toml
lolserialize-runtime/src/: lib.rs
rpc-tester/: Cargo.toml  schema.vol
rpc-tester/harness/go/: go.mod
rpc-tester/harness/rust/: Cargo.toml
rpc-tester/harness/ts/: client.ts  package.json
rpc-tester/src/: common.rs  lang_go.rs  lang_rust.rs  lang_typescript.rs  main.rs
runtime-go/: rpc.go
runtime-rust/: Cargo.toml
runtime-rust/src/: lib.rs  rpc.rs
runtime-typescript/: package.json  rpc.ts
src/: codegen.rs  lib.rs  main.rs  parser.rs  rt.rs  schema.rs
test/src/: lang_go.rs
tester/src/: lang_typescript.rs  main.rs
tester/tests/: primitives.json  primitives.vol
volexc/: Cargo.toml
volexc/src/: checker.rs  codegen_go.rs  codegen_rust.rs  codegen_typescript.rs  lib.rs  main.rs  parser.rs  schema.rs
volexc/tests/: ui.rs
volexc/tests/ui/: check_duplicate_enum.out  check_duplicate_enum_index.out  check_duplicate_enum_variant.out  check_duplicate_message.out  check_duplicate_message_field.out  check_duplicate_message_index.out  check_duplicate_struct.out  check_duplicate_struct_field.out  check_duplicate_union.out  check_duplicate_union_index.out  check_duplicate_union_variant.out  check_message_index_zero.out  check_undefined_type_array.out  (+74 more)
vscode-extension/: package.json
(+4 files in other folders)
