[package]
name = "lolserialize-compiler"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "lolserialize"
path = "src/main.rs"

[dependencies]
chumsky = "0.9"
ariadne = "0.4"

[dev-dependencies]
lolserialize-runtime = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
